Known Issue #8: resolved, changed font size for order number on smaller devices to prevent horizontal scrolling

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -85,3 +85,11 @@
     margin: 0;
     height: 100%;
 }
+
+
+/* Responsiveness */
+@media (max-width: 767px) {
+    #order-number {
+        font-size: 0.75rem;
+    }
+}
